@@ -1,12 +1,21 @@
 {
-  "timestamp" : "2025-08-09T02:10:09Z",
+  "timestamp" : "2025-08-22T02:02:38Z",
   "count_outdated" : 267,
   "uniques_outdated" : 233,
-  "count" : 268,
-  "uniques" : 234,
+  "count" : 269,
+  "uniques" : 235,
   "clones" : [
     {
       "timestamp": "2025-08-08T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "count_decinc": [ 0, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ],
+      "uniques_decinc": [ 0, 1 ]
+    },
+    {
+      "timestamp": "2025-08-17T00:00:00Z",
       "count": 1,
       "count_minmax": [ 1, 1 ],
       "count_decinc": [ 0, 1 ],
